--- a/src/main/resources/templates/consumer.html
+++ b/src/main/resources/templates/consumer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     <title>Title</title>
 </head>
@@ -13,10 +15,7 @@
     <h3>Frontlinien i kampen mod madspild..</h3>
     <hr>
 
-    <nav class="header-nav">
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 </header>
@@ -48,10 +47,7 @@
 
 <footer id="foot">
     <hr>
-    <nav>
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 
