--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head xmlns="http://www.w3.org/1999/html">
-    <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     <title>For Mad'Resten</title>
 </head>
 
@@ -11,10 +13,7 @@
     </h1>
     <h3>Frontlinien i kampen mod madspild..</h3>
     <hr>
-    <nav>
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 </header>
@@ -66,10 +65,7 @@
 </div>
 <footer id="foot">
     <hr>
-    <nav>
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 
