--- a/src/main/resources/templates/succes.html
+++ b/src/main/resources/templates/succes.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="stylesheet/style.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     <title>Succes</title>
 </head>
 
@@ -15,10 +16,7 @@
     </h1>
     <h3>Frontlinien i kampen mod madspild..</h3>
     <hr>
-    <nav>
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 </header>
@@ -33,10 +31,7 @@
 
 <footer id="foot">
     <hr>
-    <nav>
-        <a href="index">Home</a>
-        <a href="form">Skriv et opslag</a>
-        <a href="dashboard">Opslagstavlen</a>
+    <nav th:replace="fragments :: pageLinks">
     </nav>
     <hr>
 
