--- a/src/main/resources/templates/consumer.html
+++ b/src/main/resources/templates/consumer.html
@@ -13,6 +13,8 @@
     <h3>Frontlinien i kampen mod madspild..</h3>
     <hr>
 
+
+
     <nav class="header-nav">
         <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
@@ -22,7 +24,16 @@
 </header>
 <div id="consumer-flex">
     <div id="consumer-flex-child1">
+        <p>FIRE RÅD TIL MINDRE MADSPILD
+            1) Køb kun det, du skal spise: Det er dog nemmere sagt end gjort, da man hele tiden skal have overblik over, hvad der allerede er derhjemme i køleskabet og køkkenskabene. Derfor kan det være en fordel at lave en madplan for ugen. På den måde kan du få brugt resterne af eksempelvis grøntsager fra retter tidligere på ugen.
 
+            2) Vær kreativ: Når du står med fem æg, nogle halve grøntsager og lidt serranoskinke, handler det om at være kreativ. Hvilke retter kan du bikse sammen med de råvarer? Heldigvis er der forskellige hjemmesider, hvor du kan få inspiration. Eksempelvis her, hvor vi hos DR giver dig seks retter, der kan få bugt med resterne, eller her, hvor der er ‘tøm-køleskabet’-opskrifter.
+
+            3) Frys dine rester ned: Hvis du har lavet en stor omgang chili con carne, skal du spise chili con carne de næste tre dage, for at alle resterne bliver spist - og det kan måske blive en tand for meget. Derfor kan du fryse resterne ned i poser, så du senere kan hive en portion ud af fryseren og varme den. Pas dog på, at fryseren ikke bliver et venteværelse til din skraldespand.
+
+            4) Hold en ugentlig reste-dag: Her kan du få spist rester fra de forrige dage. Du kan også få spist eksempelvis rugbrød og pålæg, der snart overskrider holdbarhedsdatoen. Her er det vigtigt at huske, at efter ‘sidste anvendelsesdato’ skal produktet smides væk. Men hvis angivelsen er ‘bedst før’, kan produktet stadig spises efter datoen, hvis det lugter og smager fint.
+
+            Kilde: Fødevarestyrelsen, Michael René, lektor i fødevarevidenskab og Jessica Aschemann-Witzel, professor i forbrugeradfærd.</p>
     </div>
     <div id="consumer-flex-child2">
 
