--- a/src/main/resources/templates/organisation.html
+++ b/src/main/resources/templates/organisation.html
@@ -21,6 +21,8 @@
 </header>
 <div id="organisation-flex">
     <div id="organisation-flex-child1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus augue eget ipsum blandit hendrerit. Aliquam elementum ligula eros, quis viverra est pellentesque non. Etiam magna magna, vehicula sit amet commodo et, suscipit vitae odio. Aliquam pharetra arcu vitae mauris placerat, vel elementum nisl hendrerit. Pellentesque et arcu magna. In nisl nisl, tristique a tellus commodo, tristique ullamcorper ante. Aenean fermentum vehicula nunc vitae maximus. Vivamus vel tristique erat. Integer venenatis arcu nulla, vel blandit diam posuere eget. Curabitur non lorem odio. Donec ac nisl non ipsum lobortis auctor in sed purus. Suspendisse semper sollicitudin risus, id semper tortor ultricies ut. In eleifend tortor vel cursus imperdiet. Donec mollis, enim et fermentum sodales, dui massa dapibus enim, eu pretium mauris tortor commodo sem. Nunc luctus sagittis nibh eu ornare. Maecenas non tempor ligula.</p>
+
 
     </div>
     <div id="organisation-flex-child2">
