--- a/src/main/resources/static/stylesheet/style.css
+++ b/src/main/resources/static/stylesheet/style.css
@@ -12,13 +12,13 @@ html{
 }
 
 header{
+    color: black;
     text-align: center;
 
 
 }
 header h1{
     color: black;
-    margin-top:2px;
     text-align: center;
 
 }
@@ -27,13 +27,14 @@ header h3{
     text-align: center;
 }
 header nav{
-    display: flex;
-    color: black;
-}
-header nav a{
-    flex-grow:1;
+
     color: black;
 
+}
+header nav a{
+
+    color: black;
+    text-align: justify-all;
 }
 
 .flex-box p{
