--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,13 @@
 
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
@@ -23,19 +23,19 @@
     <p>
         For Mad'Resten - er et samlingssted hvor private, såvel som firmaer og velgørende organisationer.
         Kan finde inspiration, udveksle ideer og komme med konkrete forslag til måder hvorpå man kan minimere
-        det, store madspild. Som har stået på alt for længe.
+        det, store madspild. Som har stået på alt for længe...
     </p>
 </div>
 <div class="flex-box2">
     <section class="consumer-section">
         <h4>
-            Forbrugeren
+            Forbrugeren.
         </h4>
         <p>
-            Hvordan kan du bidrage som privat forbruger?
+            Hvordan kan du bidrage som privat forbruger.?
         </p>
         <nav>
-            <a href="consumer"><img src="img/familypicture.jpg" height="120px" width="200px" alt="pic of family shopping"></a>
+            <a href="consumer"><img height="120px" width="200px" src="img/familypicture.jpg" alt="pic of family shopping"></a>
         </nav>
     </section>
 
@@ -44,7 +44,7 @@
             Virksomheder
         </h4>
         <p>
-            Hvordan kan din virksomhed bidrage?
+            Hvordan kan din virksomhed bidrage.?
         </p>
         <nav>
             <a href="company"><img  height="120px" width="200px" src="../img/businesspicture.jpg" alt="restaurant/kitchen pic"/></a>
