update consumer, custumer, org. pages.

--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -9,37 +9,51 @@
 <!-- -------------------------- Header ------------------------------------ -->
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild..</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
 </header>
+
 <!-- --------------------------------- Flexbox ------------------------------- -->
 <div id="company-flex"> <!-- flex parent div ---------------- -->
-    <div id="company-flex-child1"> <!-- Flexbox child div 1 ---------- -->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus augue eget ipsum blandit hendrerit. Aliquam elementum ligula eros, quis viverra est pellentesque non. Etiam magna magna, vehicula sit amet commodo et, suscipit vitae odio. Aliquam pharetra arcu vitae mauris placerat, vel elementum nisl hendrerit. Pellentesque et arcu magna. In nisl nisl, tristique a tellus commodo, tristique ullamcorper ante. Aenean fermentum vehicula nunc vitae maximus. Vivamus vel tristique erat. Integer venenatis arcu nulla, vel blandit diam posuere eget. Curabitur non lorem odio. Donec ac nisl non ipsum lobortis auctor in sed purus. Suspendisse semper sollicitudin risus, id semper tortor ultricies ut. In eleifend tortor vel cursus imperdiet. Donec mollis, enim et fermentum sodales, dui massa dapibus enim, eu pretium mauris tortor commodo sem. Nunc luctus sagittis nibh eu ornare. Maecenas non tempor ligula.</p>
-
-
+    <div id="company-flex-pic">
+        <img src="/img/businesspicture.jpg" height="400px" width="200px" alt="restaurant-kitchen-pic"/>
     </div>
-    <div id="comoany-flex-child2">
+    <div id="company-flex-text">
+        <h2>Vi arbejder for mindre madspild</h2>
+        <p>
+            Dagligvarehandlen har i mange år arbejdet aktivt for at reducere madspild, fx ved at sænke prisen på fødevarer, hvis holdbarhed er ved at udløbe, eller ved at donere varer til fødevarebanker og sociale institutioner. Samtidig ender en del overskudsmad som dyrefoder eller biobrændsel.
+
+            <h3>Alle har ansvar for at reducere madspild</h3>
+            Alle led i fødevarekæden samt myndigheder og forbrugere har et ansvar for at reducere madspild. Det kan være i form af information og oplysning til forbrugerne om, hvordan fødevarer opbevares bedst i hjemmet, og hvordan fødevarer tilberedes, så mindst muligt går til spilde. Eller det kan være via øget forskning og udvikling af emballager, der kan forbedre og forlænge holdbarheden af fødevarer.
+
+
+        </p>
+
 
     </div>
     <div id="company-flex-child3">
+        <h3>Lovgivningsmæssige benspænd</h3>
+        <p>
+            Der er dog stadig juridiske benspænd, som gør, at det kan være svært at mindske madspildet ved at donere fødevarer eller videredistribuere dem til andre virksomheder og organisationer.
 
+            Dansk Erhverv samarbejder med andre organisationer og myndighederne for at fjerne disse barrierer, samtidig med at vi lægger vægt på, at fødevaresikkerheden skal være i orden.
+        </p>
     </div>
 </div>
 <!-- ---------------------------- Footer ------------------------------ -->
 <footer id="foot">
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
