--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -9,14 +9,13 @@
 
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild..</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
-
-    <nav class="header-nav">
-        <a href="index">Home</a>
+    <nav>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
@@ -57,8 +56,8 @@
 <footer id="foot">
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
