--- a/src/main/resources/templates/organisation.html
+++ b/src/main/resources/templates/organisation.html
@@ -8,42 +8,56 @@
 <body class="organisation">
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild..</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
 </header>
+
 <div id="organisation-flex">
-    <div id="organisation-flex-child1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus augue eget ipsum blandit hendrerit. Aliquam elementum ligula eros, quis viverra est pellentesque non. Etiam magna magna, vehicula sit amet commodo et, suscipit vitae odio. Aliquam pharetra arcu vitae mauris placerat, vel elementum nisl hendrerit. Pellentesque et arcu magna. In nisl nisl, tristique a tellus commodo, tristique ullamcorper ante. Aenean fermentum vehicula nunc vitae maximus. Vivamus vel tristique erat. Integer venenatis arcu nulla, vel blandit diam posuere eget. Curabitur non lorem odio. Donec ac nisl non ipsum lobortis auctor in sed purus. Suspendisse semper sollicitudin risus, id semper tortor ultricies ut. In eleifend tortor vel cursus imperdiet. Donec mollis, enim et fermentum sodales, dui massa dapibus enim, eu pretium mauris tortor commodo sem. Nunc luctus sagittis nibh eu ornare. Maecenas non tempor ligula.</p>
+    <div id="organisation-flex-pic">
+        <img src="/img/donationpicture2.jpg" width="200px" height="400px" alt="organisation-pic"/>
+    </div>
+    <div id="organisation-flex-text">
+        <h2>
+            Fra madspild til madoveskud og madhjælp</h2>
+        <p>
+            Der bliver i Danmark smidt tusindvis af tons god, spiselig
+            mad ud, som kunne været spist. Altimens siger en undersøgelse
+            fra Arbejderbevægelsens Erhvervsråd, at alene i Danmark lever
+            300.000 danskere under OECD's fattigdomsgrænse.
+            Der er mere end hvert 10. barn i Danmark, som lever i relativ fattigdom.
+            10,2% af alle børn i alderen 0-17 år lever i relativ fattigdom,
+            viser tal fra UNICEF.
+            Beboere i 100.000 danske husstande må jævnligt springe et måltid over eller få mad foræret af familie og venner, fordi de ikke har råd til at købe mad nok, viser en undersøgelse som er foretaget af Institut for Fødevare- og Ressourceøkonomi på Københavns Universitet.
+        </p>
 
 
     </div>
-    <div id="organisation-flex-child2">
-
-    </div>
-    <div id="corganisation-flex-child3">
-
+    <div id="organisation-flex-child3">
+        <p>
+            Derudover viser tal fra Det Nationale Forsknings- og Analysecenter for Velfærd at Danmark har cirka 6.600 hjemløse - og antallet stiger. Derfor er der flere muigheder for at donere god og frisk overskudsmad til hjælpeorganisationer for hjemløse og socialt udsatte. Længere henne på siden her kan du finde vores landsdækkende liste over væresteder, herberger, kvindehjem, krisecentre og forsorgshjem for socialt udsatte samt andre hjælpeorganisationer.
+        </p>
     </div>
 </div>
-    <footer id="foot">
-        <hr>
-        <nav>
-            <a href="index">Home</a>
-            <a href="form">Skriv et opslag</a>
-            <a href="dashboard">Opslagstavlen</a>
-        </nav>
-        <hr>
+<footer id="foot">
+    <hr>
+    <nav>
+        <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
+        <a href="dashboard">Opslagstavlen</a>
+    </nav>
+    <hr>
 
-        <div id="foot-text">
-            <p>•  • Copyright ☺ 2021 • All rights reserved • Mathias - Jesper - Robert •  •</p>
-        </div>
-    </footer>
+    <div id="foot-text">
+        <p>•  • Copyright ☺ 2021 • All rights reserved • Mathias - Jesper - Robert •  •</p>
+    </div>
+</footer>
 </body>
 </html>
