--- a/src/main/resources/static/stylesheet/style.css
+++ b/src/main/resources/static/stylesheet/style.css
@@ -2,74 +2,88 @@ body{
     /*background-image: url("../img/formanresten1.jpg");
     size: 1200px;*/
     background-color: white;
-
-
+    margin-top: 5px;
 }
-
-html{
-
-
-}
-
 header{
+    background-color: white;
     color: black;
     text-align: center;
-
-
+    position:absolute;
+    top:0; left:0;
+    height:190px; right:0;
+    overflow:hidden;
 }
 header h1{
     color: black;
     text-align: center;
-
 }
 header h3{
     color: black;
     text-align: center;
 }
 header nav{
-
+    display: flex;
     color: black;
-
 }
 header nav a{
-
+    flex-grow: 1;
     color: black;
-    text-align: justify-all;
 }
-
 .flex-box p{
     display: flex;
     width: 89%;
     text-align: center;
-    margin-top: 0.5rem;
+    margin-top: 190px;
     color: black;
     margin-left:50px;
-
-
 }
 .flex-box2{
     display: flex;
     justify-content: space-around;
     width: 100%;
-
-
-
-
-
 }
 .consumer-section{
-
     text-align: center;
     color: black;
     width: 200px;
     flex-grow:1;
+}
+#consumer-flex{
+    display: flex;
+    flex-direction: row;
+}
+#consumer-flex-pic{
+    padding: 20px;
+    margin-top: 190px;
+}
+#consumer-flex-text {
+    padding: 40px;
+    font-size: medium;
+    position: center;
+    margin-top: 190px;
+}
+#consumer-flex-text h2{
+    margin-top: 20px;
+    text-align: center;
+}
+#consumer-flex-o-list{
+    padding: 10px;
+    font-size: small;
 
 }
-.consumer-section p{
-
+#consumer-flex-o-list h3{
+    text-align: center;
 }
-
-
+#company-flex{
+    display: flex;
+    width: 95%;
+}
+#company-flex-text{
+    padding: 10px;
+}
+#company-flex-pic{
+    padding: 10px;
+}
 .company-section{
     text-align: center;
     color: black;
@@ -79,6 +93,16 @@ header nav a{
 }
 .company-section p{
 }
+#company-flex{
+    display: flex;
+    width: 95%;
+}
+#company-flex-pic{
+    padding: 10px;
+}
+#company-flex-text{
+    padding: 10px;
+}
 .organisation-section{
 
     text-align: center;
@@ -86,17 +110,30 @@ header nav a{
     width: 200px;
     flex-grow:1;
 }
+#organisation-flex{
+    display: flex;
+    width: 95%;
+}
+#organisation-flex-text{
+    padding: 10px;
+}
+#organisation-flex-pic{
+    padding: 10px;
+}
 #dashboard-page{
     color: black;
 }
 #foot{
-    position: center;
+    margin-bottom: 0;
+    position: absolute;
     width: 100%;
     text-align: center;
+
+
 }
 #foot nav{
     display: flex;
-    text-align: center;
+
 }
 #foot a{
     flex-grow: 1;
