--- a/src/main/resources/templates/consumer.html
+++ b/src/main/resources/templates/consumer.html
@@ -8,41 +8,58 @@
 <body class="consumer">
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild..</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
-
-
-
-    <nav class="header-nav">
-        <a href="index">Home</a>
+    <nav>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
 </header>
+<!-- --------------------flexbox ------------------------- -->
 <div id="consumer-flex">
-    <div id="consumer-flex-child1">
-        <p>FIRE RÅD TIL MINDRE MADSPILD
-            1) Køb kun det, du skal spise: Det er dog nemmere sagt end gjort, da man hele tiden skal have overblik over, hvad der allerede er derhjemme i køleskabet og køkkenskabene. Derfor kan det være en fordel at lave en madplan for ugen. På den måde kan du få brugt resterne af eksempelvis grøntsager fra retter tidligere på ugen.
-
-            2) Vær kreativ: Når du står med fem æg, nogle halve grøntsager og lidt serranoskinke, handler det om at være kreativ. Hvilke retter kan du bikse sammen med de råvarer? Heldigvis er der forskellige hjemmesider, hvor du kan få inspiration. Eksempelvis her, hvor vi hos DR giver dig seks retter, der kan få bugt med resterne, eller her, hvor der er ‘tøm-køleskabet’-opskrifter.
-
-            3) Frys dine rester ned: Hvis du har lavet en stor omgang chili con carne, skal du spise chili con carne de næste tre dage, for at alle resterne bliver spist - og det kan måske blive en tand for meget. Derfor kan du fryse resterne ned i poser, så du senere kan hive en portion ud af fryseren og varme den. Pas dog på, at fryseren ikke bliver et venteværelse til din skraldespand.
-
-            4) Hold en ugentlig reste-dag: Her kan du få spist rester fra de forrige dage. Du kan også få spist eksempelvis rugbrød og pålæg, der snart overskrider holdbarhedsdatoen. Her er det vigtigt at huske, at efter ‘sidste anvendelsesdato’ skal produktet smides væk. Men hvis angivelsen er ‘bedst før’, kan produktet stadig spises efter datoen, hvis det lugter og smager fint.
-
-            Kilde: Fødevarestyrelsen, Michael René, lektor i fødevarevidenskab og Jessica Aschemann-Witzel, professor i forbrugeradfærd.</p>
+    <div id="consumer-flex-pic">
+        <img src="/img/familypicture.jpg" height="400px"
+         width="300px" alt="family-shopping"/>
     </div>
-    <div id="consumer-flex-child2">
-
-    </div>
-    <div id="consumer-flex-child3">
-
+        <div id="consumer-flex-text">
+        <h2>Hvordan kan du som forbruger bidrage</h2>
+        <p>
+            Hvordan kan den enkelte forbruger forhindre madspild?
+            Ifølge FN’s Fødevare- og landbrugsorganisations (FAO) kampagne “Think, Eat, Save”, kan man som forbruger være kraftigt medvirkende til at reducere de 1.3 milliarder ton mad, der årligt smides ud, hvis man følger nogle enkle råd (se kilder). Et par af disse lyder f.eks.: spis, hvad du har i fryseren, før du køber nye frostvarer, og tag kun det mad op på tallerkenen, du kan spise.
+            Også EU-Kommissionen har i forbindelse med kampagnen “Stop food waste” udarbejdet en række anbefalinger til at begrænse madspild, der beskrives i notatet “Hvad kan jeg gøre i dagligdagen for at begrænse madspild?” (se kilder). Et af tipsene går på at planlægge måltider og madindkøb, så man bruger, hvad der står i køleskabet og ikke kommer til at købe varer, man allerede har. Et andet væsentligt råd er, at man skal skelne mellem mærket “sidste anvendelsesdato” og ”mindst holdbar til”-datoen. ”Sidste anvendelsesdato” benyttes til let fordærvelige varer som f.eks. fisk og kød, hvor det kan være forbundet med en helbredsrisiko at spise maden efter en bestemt periode. “Mindst holdbar til”-datoen bruges derimod til ikke-letfordærvelige varer som f.eks. brød, gryn og pasta og fortæller, hvorvidt man kan forvente samme kvalitet af maden efter overskridelse af den angivne dato. I rigtig mange tilfælde vil varer med overskredet ”mindst holdbar til”-dato altså være helt sikre at spise, pointerer EU-notatet (se kilder). Er man i tvivl om en vare stadig er frisk, kan det som regel være en hjælp at lugte til eller smage på maden.
+            Som reaktion på udsmidningen af spiselige fødevarer og den moderne forbrugskultur er der opstået en international skraldekultur, hvor de såkaldte skraldere finder og spiser kasserede madvarer fra fødevarebutikkernes containere.
+        </p>
     </div>
 </div>
+<div id="consumer-flex-o-list">
+    <h3>
+        4 GODE RÅD TIL MINDRE MADSPILD
+    </h3>
+    <ol>
+        <li>
+            Køb kun det, du skal spise: Det er dog nemmere sagt end gjort, da man hele tiden skal have overblik over, hvad der allerede er derhjemme i køleskabet og køkkenskabene. Derfor kan det være en fordel at lave en madplan for ugen.
+            På den måde kan du få brugt resterne af eksempelvis grøntsager fra retter tidligere på ugen.
+        </li>
 
+        <li>
+            Vær kreativ: Når du står med fem æg, nogle halve grøntsager og lidt serranoskinke, handler det om at være kreativ. Hvilke retter kan du bikse sammen med de råvarer? Heldigvis er der forskellige hjemmesider, hvor du kan få inspiration. Eksempelvis her, hvor vi hos DR giver dig seks retter, der kan få bugt med resterne, eller her, hvor der er ‘tøm-køleskabet’-opskrifter.
+        </li>
+        <li>
+            Frys dine rester ned: Hvis du har lavet en stor omgang chili con carne, skal du spise chili con carne de næste tre dage, for at alle resterne bliver spist - og det kan måske blive en tand for meget. Derfor kan du fryse resterne ned i poser, så du senere kan hive en portion ud af fryseren og varme den. Pas dog på, at fryseren ikke bliver et venteværelse til din skraldespand.
+        </li>
+        <li>
+            Hold en ugentlig reste-dag: Her kan du få spist rester fra de forrige dage. Du kan også få spist eksempelvis rugbrød og pålæg, der snart overskrider holdbarhedsdatoen. Her er det vigtigt at huske, at efter ‘sidste anvendelsesdato’ skal produktet smides væk. Men hvis angivelsen er ‘bedst før’, kan produktet stadig spises efter datoen, hvis det lugter og smager fint.
+        </li>
+        Kilde: Fødevarestyrelsen, Michael René, lektor i fødevarevidenskab og Jessica Aschemann-Witzel, professor i forbrugeradfærd.</p>
+    </ol>
+</div>
+
+
+<!-- Flexbox end ------------------------------ -->
 
 
 
@@ -60,8 +77,8 @@
 <footer id="foot">
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
