--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -8,13 +8,13 @@
 <body class="dashboard">
 <header class="header">
     <h1>
-        For Mad'Resten!
+        For'Mad'Resten
     </h1>
-    <h3>Frontlinien i kampen mod madspild..</h3>
+    <p><em>Frontlinien i kampen mod madspild</em></p>
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
@@ -35,8 +35,8 @@
 <footer id="foot">
     <hr>
     <nav>
-        <a href="index">Home</a>
         <a href="form">Skriv et opslag</a>
+        <a href="index">Home</a>
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
