update consumer, custumer, org. pages.v2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,11 @@
 </header>
 <body class="body">
 <div class="flex-box">
-    <p>
-        For Mad'Resten - er et samlingssted hvor private, såvel som firmaer og velgørende organisationer.
+    <h4>
+
+    </h4>
+    <p><strong>For Mad'Resten</strong>
+        - Er et samlingssted hvor private, såvel som firmaer og velgørende organisationer.
         Kan finde inspiration, udveksle ideer og komme med konkrete forslag til måder hvorpå man kan minimere
         det, store madspild. Som har stået på alt for længe...
     </p>
@@ -72,7 +75,6 @@
         <a href="dashboard">Opslagstavlen</a>
     </nav>
     <hr>
-
     <div id="foot-text">
         <p>•  • Copyright ☺ 2021 • All rights reserved • Mathias - Jesper - Robert •  •</p>
     </div>
