--- a/src/main/resources/static/stylesheet/style.css
+++ b/src/main/resources/static/stylesheet/style.css
@@ -1,3 +1,8 @@
+.html{
+    width: 100%;
+    height: 100%;
+}
+
 body{
     /*background-image: url("../img/formanresten1.jpg");
     size: 1200px;*/
@@ -8,10 +13,7 @@ header{
     background-color: white;
     color: black;
     text-align: center;
-    position:absolute;
-    top:0; left:0;
-    height:190px; right:0;
-    overflow:hidden;
+
 }
 header h1{
     color: black;
@@ -31,13 +33,13 @@ header nav a{
 }
 .flex-box p{
     display: flex;
-    width: 89%;
     text-align: center;
-    margin-top: 190px;
+    margin-top: 50px;
     color: black;
-    margin-left:50px;
 }
 .flex-box2{
+    margin-top: 50px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -124,8 +126,7 @@ header nav a{
     color: black;
 }
 #foot{
-    margin-bottom: 0;
-    position: absolute;
+    margin-top: 30px;
     width: 100%;
     text-align: center;
 
@@ -133,6 +134,7 @@ header nav a{
 }
 #foot nav{
     display: flex;
+
 
 }
 #foot a{
